--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ pylint-protobuf==0.13
 pyppeteer==0.2.2
 pyquery==1.4.3
 python-Levenshtein==0.12.0
+pytz==2020.5
 requests==2.25.0
 requests-html==0.10.0
 six==1.15.0
