--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,33 @@
-appdirs==1.4.4
 astroid==2.4.2
-beautifulsoup4==4.9.3
-bs4==0.0.1
-certifi==2020.12.5
-chardet==3.0.4
-click==7.1.2
-cs50==6.0.2
-cssselect==1.1.0
-dominate==2.6.0
-fake-useragent==0.1.11
-Flask==1.1.2
-Flask-Bootstrap==3.3.7.1
-Flask-Datepicker==0.14
-fuzzywuzzy==0.18.0
-gunicorn==20.0.4
-html5lib==1.1
-idna==2.10
+beautifulsoup4==4.7.1
+cachetools==4.1.0
+click==8.1.2
+EZGmail==0.0.8
+EZSheets==0.0.6
+google-api-core==1.17.0
+google-api-python-client==1.8.2
+google-auth==1.14.1
+google-auth-httplib2==0.0.3
+google-auth-oauthlib==0.4.1
+googleapis-common-protos==1.51.0
+httplib2==0.17.3
+idna==2.8
 isort==5.6.4
-itsdangerous==1.1.0
-Jinja2==2.11.2
 lazy-object-proxy==1.4.3
-lxml==4.6.2
-MarkupSafe==1.1.1
 mccabe==0.6.1
-parse==1.18.0
-pyee==7.0.4
-pyenchant==3.2.0
+oauth2client==4.1.3
+oauthlib==3.1.0
+openpyxl==2.6.1
+protobuf==3.11.3
+pur==6.1.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pylint==2.6.0
-pylint-protobuf==0.13
-pyppeteer==0.2.2
-pyquery==1.4.3
-python-Levenshtein==0.12.0
-pytz==2020.5
-requests==2.25.0
-requests-html==0.10.0
-six==1.15.0
-soupsieve==2.0.1
-SQLAlchemy==1.3.22
-sqlparse==0.4.1
-termcolor==1.1.0
+requests==2.21.0
+requests-oauthlib==1.3.0
+rsa==4.0
+six @ file:///AppleInternal/BuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-103/six-1.15.0-py2.py3-none-any.whl
 toml==0.10.2
-tqdm==4.54.1
-urllib3==1.26.2
-visitor==0.1.3
-w3lib==1.22.0
-webencodings==0.5.1
-websockets==8.1
-Werkzeug==1.0.1
+uritemplate==3.0.1
+urllib3==1.24.3
 wrapt==1.12.1
