--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ google-auth==2.6.5
 google-auth-httplib2==0.1.0
 google-auth-oauthlib==0.5.1
 googleapis-common-protos==1.56.0
+gunicorn==20.1.0
 httplib2==0.20.4
 idna==3.3
 isort==5.10.1
