--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ charset-normalizer==2.0.12
 click==8.1.2
 dill==0.3.4
 et-xmlfile==1.1.0
+Flask==2.1.1
 google-api-core==2.7.2
 google-api-python-client==2.44.0
 google-auth==2.6.5
@@ -16,8 +17,12 @@ googleapis-common-protos==1.56.0
 gunicorn==20.1.0
 httplib2==0.20.4
 idna==3.3
+importlib-metadata==4.11.3
 isort==5.10.1
+itsdangerous==2.1.2
+Jinja2==3.1.1
 lazy-object-proxy==1.7.1
+MarkupSafe==2.1.1
 mccabe==0.7.0
 oauth2client==4.1.3
 oauthlib==3.2.0
@@ -40,4 +45,6 @@ tomli==2.0.1
 typing_extensions==4.1.1
 uritemplate==4.1.1
 urllib3==1.26.9
+Werkzeug==2.1.1
 wrapt==1.14.0
+zipp==3.8.0
