--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ pyasn1-modules==0.2.8
 pylint==2.13.5
 pyparsing==3.0.8
 python-dotenv==0.20.0
+pytz==2022.1
 requests==2.27.1
 requests-oauthlib==1.3.1
 rsa==4.8
