--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
+altgraph @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/altgraph-0.17.2-py2.py3-none-any.whl
 astroid==2.11.2
 beautifulsoup4==4.11.1
+bpyutils==0.5.8
 cachetools==5.0.0
 certifi==2021.10.8
 chardet==4.0.0
@@ -7,7 +9,8 @@ charset-normalizer==2.0.12
 click==8.1.2
 dill==0.3.4
 et-xmlfile==1.1.0
-Flask==2.1.1
+Flask==2.2.2
+future @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/future-0.18.2-py3-none-any.whl
 google-api-core==2.7.2
 google-api-python-client==2.44.0
 google-auth==2.6.5
@@ -22,12 +25,15 @@ isort==5.10.1
 itsdangerous==2.1.2
 Jinja2==3.1.1
 lazy-object-proxy==1.7.1
+macholib @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/macholib-1.15.2-py2.py3-none-any.whl
 MarkupSafe==2.1.1
 mccabe==0.7.0
 oauth2client==4.1.3
 oauthlib==3.2.1
 openpyxl==3.0.9
 packaging==21.3
+pip-review==1.2.0
+pipupgrade==1.12.0
 platformdirs==2.5.1
 protobuf==3.20.2
 pyasn1==0.4.8
@@ -46,6 +52,6 @@ tomli==2.0.1
 typing_extensions==4.1.1
 uritemplate==4.1.1
 urllib3==1.26.9
-Werkzeug==2.1.1
+Werkzeug==2.2.2
 wrapt==1.14.0
 zipp==3.8.0
