--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-Flask==2.2.2
+blinker==1.6.2
+click==8.1.7
+Flask==2.3.3
 gunicorn==20.1.0
 importlib-metadata==5.0.0
 itsdangerous==2.1.2
@@ -6,5 +8,5 @@ Jinja2==3.1.2
 MarkupSafe==2.1.1
 python-dotenv==0.21.0
 pytz==2022.4
-Werkzeug==2.2.3
+Werkzeug==2.3.7
 zipp==3.9.0
